버전 정보 추가

--- a/hybrid_app_homework/mobile/app.json
+++ b/hybrid_app_homework/mobile/app.json
@@ -13,9 +13,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "buildNumber": "1000001"
     },
     "android": {
+      "versionCode": 1000001,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
