--- a/hybrid_app_homework/my-web/package.json
+++ b/hybrid_app_homework/my-web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "next": "14.2.17",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
@@ -16,7 +17,9 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-kakao-maps-sdk": "^1.1.27",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
