--- a/hybrid_app_homework/my-web/package.json
+++ b/hybrid_app_homework/my-web/package.json
@@ -9,24 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@hookform/resolvers": "^3.9.1",
+    "clsx": "^2.1.1",
     "next": "14.2.17",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "swiper": "^11.1.15",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
+    "msw": "^2.6.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
