--- a/hybrid-app/class-web/package.json
+++ b/hybrid-app/class-web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
+    "graphql": "^16.9.0",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
