--- a/hybrid_app_homework/my-web/package.json
+++ b/hybrid_app_homework/my-web/package.json
@@ -21,6 +21,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "swiper": "^11.1.15",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
