앱 설정 파일 수정: 스플래시 이미지 경로 변경, 리사이즈 모드 수정, iOS 위치 정보 사용 설명 추가

--- a/hybrid_app_homework/mobile/app.json
+++ b/hybrid_app_homework/mobile/app.json
@@ -8,13 +8,17 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/splash.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "ios": {
+      "buildNumber": "1000001",
       "supportsTablet": true,
-      "buildNumber": "1000001"
+      "infoPlist": {
+        "NSLocationAlwaysUsageDescription": "플레이스 등록시 위치정보가 사용됩니다.",
+        "NSLocationWhenInUseUsageDescription": "플레이스 등록시 위치정보가 사용됩니다."
+      }
     },
     "android": {
       "versionCode": 1000001,
@@ -28,10 +32,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-secure-store"
-    ],
+    "plugins": ["expo-router", "expo-secure-store"],
     "experiments": {
       "typedRoutes": true
     }
