--- a/hybrid_app_homework/my-web/package.json
+++ b/hybrid_app_homework/my-web/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.11.10",
     "@hookform/resolvers": "^3.9.1",
     "clsx": "^2.1.1",
+    "graphql-request": "^7.1.2",
     "next": "14.2.17",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
